--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     ],
     "minimum-stability": "dev",
     "require": {},
+    "version":"1.0.0",
     "autoload": {
         "files": [
             "registration.php"
