--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
     "minimum-stability": "dev",
     "require": {},
     "version":"1.0.0",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "autoload": {
         "files": [
             "registration.php"
